# vosk-api

./: .gitignore  CMakeLists.txt
c/: Makefile  test_vosk.cc
python/vosk/: __init__.py
